--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "functions": {
-    "api/line-webhook.js": {
-      "runtime": "nodejs20.x"
-    }
+    "api/**/*.js": { "runtime": "nodejs20.x" }
   }
 }
