--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "dev": "vercel dev",
     "deploy": "vercel --prod"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "firebase-admin": "^12.0.0",
     "node-fetch": "^3.3.2"
   }
 }
